--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chokidar-cli",
-  "description": "Ultra-fast cross-platform command line utility to watch file system changes.",
-  "version": "1.2.0",
+  "name": "chokidar-cli-infanticide",
+  "description": "chokidar-cli that kills children processes",
+  "version": "1.3.0",
   "keywords": [
     "fs",
     "watch",
@@ -34,6 +34,7 @@
     "bluebird": "^2.9.24",
     "chokidar": "^1.4.3",
     "lodash": "^3.7.0",
+    "npm-run-all": "^4.0.2",
     "shell-quote": "^1.4.3",
     "yargs": "^3.7.2"
   },
